--- a/Cpi.ipynb
+++ b/Cpi.ipynb
@@ -145,7 +145,13 @@
    "id": "fe6eb01d-c621-4e56-aa4f-ecb47c592610",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculo entropia\n",
+    "ACPTi = np.polyint(ACP[0:-1])  # Para integrar el término independiente aparte\n",
+    "SIG = S0 + ACP[-1] * np.log(T/T_R) + np.polyval(ACPTi, T)-np.polyval(ACPTi, T_R)-R*np.log(P/P_R)\n",
+    "VIG = R*T/P\n",
+    "GIG = HIG-T*SIG"
+   ]
   }
  ],
  "metadata": {
