--- a/TQA.ipynb
+++ b/TQA.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ff5f53b6-466e-4b80-92ea-01b69bd492b9",
    "metadata": {
     "tags": []
@@ -224,8 +224,8 @@
      "output_type": "stream",
      "text": [
       "Introducir cantidad de \"-CH3\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  3\n",
-      "Introducir cantidad de \"-CH2-\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  2\n",
-      "Introducir cantidad de \">CH-\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  1\n",
+      "Introducir cantidad de \"-CH2-\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  1\n",
+      "Introducir cantidad de \">CH-\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  2\n",
       "Introducir cantidad de \">C<\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  exit\n"
      ]
     },
@@ -233,48 +233,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores de grupos químicos:\n",
+      "grupos que contribuyen:\n",
       "-CH3: 3.0\n",
-      "-CH2-: 2.0\n",
-      ">CH-: 1.0\n",
-      ">C<: 0\n",
-      "=CH2: 0\n",
-      "=CH-: 0\n",
-      "=C<: 0\n",
-      "=C=: 0\n",
-      "$\\equiv$CH: 0\n",
-      "$\\equiv$C-: 0\n",
-      "-CH2- ring: 0\n",
-      ">CH- ring: 0\n",
-      ">C< ring: 0\n",
-      "=CH- ring: 0\n",
-      "=C< ring: 0\n",
-      "-F: 0\n",
-      "-Cl: 0\n",
-      "-Br: 0\n",
-      "-I: 0\n",
-      "-0H (alcohol): 0\n",
-      "-0H (phenol): 0\n",
-      "-O- (nonring): 0\n",
-      "-O- (ring): 0\n",
-      ">C=O (nonring): 0\n",
-      ">C=O (ring): 0\n",
-      "O=CH- (aldehyde): 0\n",
-      "-COOH (acid): 0\n",
-      "-COO- (ester): 0\n",
-      "=O (except -NO2): 0\n",
-      "-NH2: 0\n",
-      ">NH (nonring): 0\n",
-      ">NH (ring): 0\n",
-      ">N- (nonring): 0\n",
-      "-N= (nonring): 0\n",
-      "-N= (ring): 0\n",
-      "=NH: 0\n",
-      "-CN: 0\n",
-      "-NO2: 0\n",
-      "-SH: 0\n",
-      "-S- (nonring): 0\n",
-      "-S- (ring): 0\n"
+      "-CH2-: 1.0\n",
+      ">CH-: 2.0\n"
      ]
     },
     {
@@ -314,16 +276,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Suma de Contribuciones</th>\n",
-       "      <td>198.30</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>348.00</td>\n",
-       "      <td>138.24</td>\n",
-       "      <td>19.88</td>\n",
-       "      <td>-240.74</td>\n",
-       "      <td>-56.68</td>\n",
-       "      <td>33.68</td>\n",
-       "      <td>0.37</td>\n",
+       "      <td>198.29</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>333.00</td>\n",
+       "      <td>137.10</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>-190.21</td>\n",
+       "      <td>-6.74</td>\n",
+       "      <td>11.59</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>-0.00</td>\n",
        "      <td>-0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -331,14 +293,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                           Tc    Pc     Vc     Tb    Tf     AHF    AGF  IGCa  \\\n",
-       "Suma de Contribuciones 198.30 -0.00 348.00 138.24 19.88 -240.74 -56.68 33.68   \n",
+       "                           Tc   Pc     Vc     Tb    Tf     AHF   AGF  IGCa  \\\n",
+       "Suma de Contribuciones 198.29 0.00 333.00 137.10 21.25 -190.21 -6.74 11.59   \n",
        "\n",
        "                        IGCb  IGCc  IGCd  \n",
-       "Suma de Contribuciones  0.37  0.00 -0.00  "
+       "Suma de Contribuciones  0.48 -0.00 -0.00  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,9 +353,10 @@
     "    grupos_químicos[grupo_quimico] = valor\n",
     "    grupos_seleccionados += 1\n",
     "\n",
-    "print(\"Valores de grupos químicos:\")\n",
+    "print(\"grupos que contribuyen:\")\n",
     "for grupo, valor in grupos_químicos.items():\n",
-    "    print(f'{grupo}: {valor}')\n",
+    "    if valor > 0:\n",
+    "        print(f'{grupo}: {valor}')\n",
     "\n",
     "# vectores Joback (los vectores no han sido modificados)\n",
     "Tc = np.array([0.0141, 0.0189, 0.0164, 0.0067, 0.0113, 0.0129, 0.0117, 0.0026, 0.0027, 0.0020, 0.0100, 0.0122, 0.0042, 0.0082, 0.0143, 0.0111, 0.0105, 0.0133, 0.0068, 0.0741, 0.0240, 0.0168, 0.0098, 0.0380, 0.0284, 0.0379, 0.0791, 0.0481, 0.0143, 0.0243, 0.0295, 0.0130, 0.0169, 0.0255, 0.0085, None, 0.0496, 0.0437, 0.0031, 0.0119, 0.0019])\n",
@@ -407,11 +370,12 @@
     "IGCb = np.array([-8.08E-3, 9.50E-2, 2.04E-1, 4.27E-1, -3.81E-2, 1.05E-1, 2.08E-1, -5.57E-2, -2.71E-2, 2.01E-2, 8.54E-2, 1.62E-1, 5.57E-1, 5.74E-2, 1.01E-1, -9.13E-2, -9.63E-2, -6.49E-2, -6.41E-2, -6.91E-2, 1.11E-1, -6.32E-2, -1.26E-2, 6.70E-2, -8.29E-2, -3.36E-2, 4.27E-2, 4.02E-2, 1.96E-2, 4.12E-2, 7.62E-2, -2.30E-2, 2.27E-1, None, -3.84E-3, -4.12E-3, -7.33E-2, -3.74E-3, -7.58E-2, -5.61E-3, 4.81E-3])\n",
     "IGCc = np.array([1.53E-4, -5.44E-5, -2.65E-4, -6.41E-4, 1.72E-4, -9.63E-5, -3.06E-4, 1.01E-4, 1.11E-4, -8.33E-6, -8.00E-6, -1.6E-4, -9.00E-4, -1.64E-6, -1.42E-4, 1.91E-4, 1.87E-4, 1.36E-4, 1.26E-4, 1.77E-4, -1.16E-4, 1.11E-4, 6.03E-5, -3.57E-5, 2.36E-4, 1.60E-4, 8.04E-5, 4.02E-5, 1.27E-5, 1.64E-4, -4.86E-5, 1.07E-4, -3.20E-4, None, 4.35E-5, 1.28E-4, 1.84E-46, 1.29E-4, 1.85E-4, 4.02E-5, 2.77E-5])\n",
     "IGCd = np.array([-9.67E-8, 1.19E-8, 1.20E-7, 3.01E-7, -1.03E-7, 3.56E-8, 1.46E-7, -5.02E-8, -6.78E-8, 1.39E-9, -1.80E-8, 6.24E-8, 3.06E-7, 2.24E-9, 2.39E-8, -3.44E-8, -5.10E-8, -3.38E-8, -2.94E-8, -4.53E-8, -1.12E-7, -3.18E-8, -6.94E-9, 2.68E-8, -4.20E-8, -1.19E-8, -1.21E-8, 3.92E-9, -2.02E-8, -5.90E-8, -5.88E-9, 4.80E-8, -3.60E-7, None, 8.22E-9, 7.04E-9, -5.48E-8, 6.10E-9, -7.19E-8, 8.04E-9, -1.24E-8])\n",
+    "# numero de atomos NA = np.array([0.0141, 0.0189, 0.0164, 0.0067, 0.0113, 0.0129, 0.0117, 0.0026, 0.0027, 0.0020, 0.0100, 0.0122, 0.0042, 0.0082, 0.0143, 0.0111, 0.0105, 0.0133, 0.0068, 0.0741, 0.0240, 0.0168, 0.0098, 0.0380, 0.0284, 0.0379, 0.0791, 0.0481, 0.0143, 0.0243, 0.0295, 0.0130, 0.0169, 0.0255, 0.0085, None, 0.0496, 0.0437, 0.0031, 0.0119, 0.0019])\n",
     "# Crear una función para reemplazar None por 0.00 en un vector\n",
     "def replace_none_with_zero(vector):\n",
     "    return np.array([0.00 if x is None else x for x in vector])\n",
     "\n",
-    "# Reemplazar None en todos los vectores\n",
+    "# Reemplazar None en todos los vectores \n",
     "Tc = replace_none_with_zero(Tc)\n",
     "Pc = replace_none_with_zero(Pc)\n",
     "Vc = replace_none_with_zero(Vc)\n",
@@ -426,6 +390,7 @@
     "\n",
     "\n",
     "# Calcular la suma de las contribuciones para cada vector\n",
+    "### falta cambiar nombres y introducir simbolos en la tabla ademas de meter unidades\n",
     "suma_contribuciones = {\n",
     "    'Tc': 198.2+np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
     "    'Pc': np.sum(Pc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
