--- a/TQA.ipynb
+++ b/TQA.ipynb
@@ -310,6 +310,9 @@
     "from IPython.display import display, Math\n",
     "import pandas as pd\n",
     "\n",
+    "T=input(f'Introducir temperatura en kelvin para calcular la capacidad como gas ideal y la viscosidad en ese punto, en caso contrario pulsar enter')\n",
+    " if valor == '':\n",
+    "        valor = None\n",
     "# Crear un diccionario para almacenar los grupos químicos y sus valores\n",
     "grupos_químicos = {}\n",
     "\n",
@@ -370,7 +373,12 @@
     "IGCb = np.array([-8.08E-3, 9.50E-2, 2.04E-1, 4.27E-1, -3.81E-2, 1.05E-1, 2.08E-1, -5.57E-2, -2.71E-2, 2.01E-2, 8.54E-2, 1.62E-1, 5.57E-1, 5.74E-2, 1.01E-1, -9.13E-2, -9.63E-2, -6.49E-2, -6.41E-2, -6.91E-2, 1.11E-1, -6.32E-2, -1.26E-2, 6.70E-2, -8.29E-2, -3.36E-2, 4.27E-2, 4.02E-2, 1.96E-2, 4.12E-2, 7.62E-2, -2.30E-2, 2.27E-1, None, -3.84E-3, -4.12E-3, -7.33E-2, -3.74E-3, -7.58E-2, -5.61E-3, 4.81E-3])\n",
     "IGCc = np.array([1.53E-4, -5.44E-5, -2.65E-4, -6.41E-4, 1.72E-4, -9.63E-5, -3.06E-4, 1.01E-4, 1.11E-4, -8.33E-6, -8.00E-6, -1.6E-4, -9.00E-4, -1.64E-6, -1.42E-4, 1.91E-4, 1.87E-4, 1.36E-4, 1.26E-4, 1.77E-4, -1.16E-4, 1.11E-4, 6.03E-5, -3.57E-5, 2.36E-4, 1.60E-4, 8.04E-5, 4.02E-5, 1.27E-5, 1.64E-4, -4.86E-5, 1.07E-4, -3.20E-4, None, 4.35E-5, 1.28E-4, 1.84E-46, 1.29E-4, 1.85E-4, 4.02E-5, 2.77E-5])\n",
     "IGCd = np.array([-9.67E-8, 1.19E-8, 1.20E-7, 3.01E-7, -1.03E-7, 3.56E-8, 1.46E-7, -5.02E-8, -6.78E-8, 1.39E-9, -1.80E-8, 6.24E-8, 3.06E-7, 2.24E-9, 2.39E-8, -3.44E-8, -5.10E-8, -3.38E-8, -2.94E-8, -4.53E-8, -1.12E-7, -3.18E-8, -6.94E-9, 2.68E-8, -4.20E-8, -1.19E-8, -1.21E-8, 3.92E-9, -2.02E-8, -5.90E-8, -5.88E-9, 4.80E-8, -3.60E-7, None, 8.22E-9, 7.04E-9, -5.48E-8, 6.10E-9, -7.19E-8, 8.04E-9, -1.24E-8])\n",
+    "AHV=np.array([2.373,2.226,1.691,0.636,1.724,2.205,2.138,2.661,1.155,3.302,2.398,1.942,0.644,2.544,3.059,-0.670,4.532,6.582,9.520,16.826,12.499,2.410,4.682,8.972,6.645,9.093,19.537,9.633,5.909,10.788,6.436,6.930,1.896,3.335,6.528,12.169,12.851,16.738,6.884,6.817,5.984])\n",
+    "AHfl=np.array([0.908,2.590,0.749,-1.460,-0.473,2.691,3.063,4.720,2.322,4.151,0.490,3.243,-1.373,1.101,2.394,1.398,2.515,3.603,2.724,2.406,4.490,1.188,5.879,4.189,None,3.197,11.051,6.959,3.624,3.515,5.009,7.490,4.703,None,3.649,None,2.414,9.679,2.360,4.130,1.557])\n",
+    "na=np.array([548.29,94.16,-322.15,-573.56,495.01,82.28,None,None,None,None,307.53,-394.29,None,259.65,-245.74,None,625.45,738.91,809.55,2173.72,3018.17,122.09,440.24,340.35,None,740.92,1317.23,483.88,675.24,None,None,None,None,None,None,None,None,None,None,None,None])\n",
+    "nb=np.array([-1.719,-0.199,1.187,2.307,-1.539,-0.242,None,None,None,None,-0.798,1.251,None,-0.702,0.912,None,-1.814,-2.038,-2.224,-5.057,-\n",
     "# numero de atomos NA = np.array([0.0141, 0.0189, 0.0164, 0.0067, 0.0113, 0.0129, 0.0117, 0.0026, 0.0027, 0.0020, 0.0100, 0.0122, 0.0042, 0.0082, 0.0143, 0.0111, 0.0105, 0.0133, 0.0068, 0.0741, 0.0240, 0.0168, 0.0098, 0.0380, 0.0284, 0.0379, 0.0791, 0.0481, 0.0143, 0.0243, 0.0295, 0.0130, 0.0169, 0.0255, 0.0085, None, 0.0496, 0.0437, 0.0031, 0.0119, 0.0019])\n",
+    "# MW=np.array([])\n",
     "# Crear una función para reemplazar None por 0.00 en un vector\n",
     "def replace_none_with_zero(vector):\n",
     "    return np.array([0.00 if x is None else x for x in vector])\n",
@@ -387,27 +395,40 @@
     "IGCb = replace_none_with_zero(IGCb)\n",
     "IGCc = replace_none_with_zero(IGCc)\n",
     "IGCd = replace_none_with_zero(IGCd)\n",
-    "\n",
+    "AHV = replace_none_with_zero(AHV)\n",
+    "AHfl = replace_none_with_zero(AHfl)\n",
+    "na = replace_none_with_zero(na)\n",
+    "nb = replace_none_with_zero(nb)\n",
     "\n",
     "# Calcular la suma de las contribuciones para cada vector\n",
     "### falta cambiar nombres y introducir simbolos en la tabla ademas de meter unidades\n",
     "suma_contribuciones = {\n",
-    "    'Tc': 198.2+np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'Pc': np.sum(Pc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'Vc': np.sum(Vc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'Tb': np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'Tf': np.sum(Tf * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'AHF': np.sum(AHF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'AGF': np.sum(AGF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'IGCa': np.sum(IGCa * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'IGCb': np.sum(IGCb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'IGCc': np.sum(IGCc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'IGCd': np.sum(IGCd * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))\n",
+    "    'Tb': 198.2+np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'Tc': (198.2+np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))*(0.584+(0.965*np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))-(np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))^2)^(-1), ## falta comprobar posible error que multiplique antes de elevar a -1\n",
+    "    'Pc': (0.113+0.0032*NA-np.sum(Pc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))^(-2), #### falta definir NA\n",
+    "    'Vc': 17.5+np.sum(Vc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'Tf': 122.5+np.sum(Tf * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'AHF': = 68.29+np.sum(AHF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), #entropia formacion E.I.\n",
+    "    'AGF': 53.88+np.sum(AGF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), #energia de gibbs E.I\n",
+    "    'AHV': 15.3+np.sum(AHV * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])) #entalpia de vaporizacion en el punto de ebullicion\n",
+    "    'AHfl': (0.88)+np.sum(AHfl * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))\n",
+    "    ## dar opcion para que si existe t salga la capacidad en dicho punto si no es asi que salga los valores del polinomio\n",
+    "    'IGCa': (-37.93)+np.sum(IGCa * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCb': 0.210+np.sum(IGCb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCc':(-3.91e-4)+np.sum(IGCc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCd': 2.06e-7+np.sum(IGCd * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))\n",
+    "     ## dar opcion para que si existe t salga la viscosidad en dicho punto si no es asi que salga los valores del polinomio\n",
+    "    # 'nl':MW*np.exp(((-597.82)+np.sum(na * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))/T+(-11.202+np.sum(nb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))) falta definir el vecot MW\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "}\n",
     "\n",
     "# Crear un DataFrame de Pandas con las sumas de contribuciones\n",
     "df_suma_contribuciones = pd.DataFrame(suma_contribuciones, index=['Suma de Contribuciones'])\n",
-    "\n",
+    "# Restablece el formato de visualización a su valor predeterminado\n",
+    "pd.options.display.float_format = None\n",
     "# Imprimir la tabla de sumas de contribuciones\n",
     "df_suma_contribuciones"
    ]
