--- a/TQA.ipynb
+++ b/TQA.ipynb
@@ -213,106 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ff5f53b6-466e-4b80-92ea-01b69bd492b9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Introducir cantidad de \"-CH3\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  3\n",
-      "Introducir cantidad de \"-CH2-\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  1\n",
-      "Introducir cantidad de \">CH-\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  2\n",
-      "Introducir cantidad de \">C<\":, pulsar enter para que cuente como 0 o \"exit\" para finalizar:  exit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "grupos que contribuyen:\n",
-      "-CH3: 3.0\n",
-      "-CH2-: 1.0\n",
-      ">CH-: 2.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tc</th>\n",
-       "      <th>Pc</th>\n",
-       "      <th>Vc</th>\n",
-       "      <th>Tb</th>\n",
-       "      <th>Tf</th>\n",
-       "      <th>AHF</th>\n",
-       "      <th>AGF</th>\n",
-       "      <th>IGCa</th>\n",
-       "      <th>IGCb</th>\n",
-       "      <th>IGCc</th>\n",
-       "      <th>IGCd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Suma de Contribuciones</th>\n",
-       "      <td>198.29</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>333.00</td>\n",
-       "      <td>137.10</td>\n",
-       "      <td>21.25</td>\n",
-       "      <td>-190.21</td>\n",
-       "      <td>-6.74</td>\n",
-       "      <td>11.59</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           Tc   Pc     Vc     Tb    Tf     AHF   AGF  IGCa  \\\n",
-       "Suma de Contribuciones 198.29 0.00 333.00 137.10 21.25 -190.21 -6.74 11.59   \n",
-       "\n",
-       "                        IGCb  IGCc  IGCd  \n",
-       "Suma de Contribuciones  0.48 -0.00 -0.00  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from IPython.display import display, Math\n",
     "import pandas as pd\n",
-    "\n",
-    "T=input(f'Introducir temperatura en kelvin para calcular la capacidad como gas ideal y la viscosidad en ese punto, en caso contrario pulsar enter')\n",
-    " if valor == '':\n",
-    "        valor = None\n",
     "# Crear un diccionario para almacenar los grupos químicos y sus valores\n",
     "grupos_químicos = {}\n",
     "\n",
@@ -376,9 +286,64 @@
     "AHV=np.array([2.373,2.226,1.691,0.636,1.724,2.205,2.138,2.661,1.155,3.302,2.398,1.942,0.644,2.544,3.059,-0.670,4.532,6.582,9.520,16.826,12.499,2.410,4.682,8.972,6.645,9.093,19.537,9.633,5.909,10.788,6.436,6.930,1.896,3.335,6.528,12.169,12.851,16.738,6.884,6.817,5.984])\n",
     "AHfl=np.array([0.908,2.590,0.749,-1.460,-0.473,2.691,3.063,4.720,2.322,4.151,0.490,3.243,-1.373,1.101,2.394,1.398,2.515,3.603,2.724,2.406,4.490,1.188,5.879,4.189,None,3.197,11.051,6.959,3.624,3.515,5.009,7.490,4.703,None,3.649,None,2.414,9.679,2.360,4.130,1.557])\n",
     "na=np.array([548.29,94.16,-322.15,-573.56,495.01,82.28,None,None,None,None,307.53,-394.29,None,259.65,-245.74,None,625.45,738.91,809.55,2173.72,3018.17,122.09,440.24,340.35,None,740.92,1317.23,483.88,675.24,None,None,None,None,None,None,None,None,None,None,None,None])\n",
-    "nb=np.array([-1.719,-0.199,1.187,2.307,-1.539,-0.242,None,None,None,None,-0.798,1.251,None,-0.702,0.912,None,-1.814,-2.038,-2.224,-5.057,-\n",
-    "# numero de atomos NA = np.array([0.0141, 0.0189, 0.0164, 0.0067, 0.0113, 0.0129, 0.0117, 0.0026, 0.0027, 0.0020, 0.0100, 0.0122, 0.0042, 0.0082, 0.0143, 0.0111, 0.0105, 0.0133, 0.0068, 0.0741, 0.0240, 0.0168, 0.0098, 0.0380, 0.0284, 0.0379, 0.0791, 0.0481, 0.0143, 0.0243, 0.0295, 0.0130, 0.0169, 0.0255, 0.0085, None, 0.0496, 0.0437, 0.0031, 0.0119, 0.0019])\n",
-    "# MW=np.array([])\n",
+    "nb=np.array([-1.719,-0.199,1.187,2.307,-1.539,-0.242,None,None,None,None,-0.798,1.251,None,-0.702,0.912,None,-1.814,-2.038,-2.224,-5.057,-7.314,-0.386,-0.953,-0.350,None,-1.713,-2.578,-0.966,-1.340,None,None,None,None,None,None,None,None,None,None,None,None])\n",
+    "NA = np.array([4,3,2,1,3,2,1,1,2,1,3,2,1,2,1,1,1,1,1,2,2,1,1,2,2,3,4,3,1,3,2,2,1,1,1,2,2,3,2,1,1]) #Numero de atomos\n",
+    "MW=np.array([15.03461,14.02664,13.01867,12.0107,14.02664,13.01867,12.0107,12.0107,13.01867,12.0107,14.02664,13.01867,12.0107,13.01867,12.0107,18.9984032,35.453,79.909,126.90447,17.00737,17.00737,15.9994,15.9994,28.0101,28.0101,29.01807,45.01747,44.0095,15.9994,16.02294,15.01497,15.01497,14.007,14.007,14.007,15.01497,26.0177,46.0058,33.07297,32.065,32.065]) #masas moleculares\n",
+    "# Crear una función para reemplazar None por 0.00 en un vector\n",
+    "def replace_none_with_zero(vector):\n",
+    "    return np.array([0.00 if x is None else x for x in vector])\n",
+    "\n",
+    "# Reemplazar None en todos los vectores\n",
+    "Tc = replace_none_with_zero(Tc)\n",
+    "Pc = replace_none_with_zero(Pc)\n",
+    "Vc = replace_none_with_zero(Vc)\n",
+    "Tb = replace_none_with_zero(Tb)\n",
+    "Tf = replace_none_with_zero(Tf)\n",
+    "AHF = replace_none_with_zero(AHF)\n",
+    "AGF = replace_none_with_zero(AGF)\n",
+    "IGCa = replace_none_with_zero(IGCa)\n",
+    "IGCb = replace_none_with_zero(IGCb)\n",
+    "IGCc = replace_none_with_zero(IGCc)\n",
+    "IGCd = replace_none_with_zero(IGCd)\n",
+    "AHV = replace_none_with_zero(AHV)\n",
+    "AHfl = replace_none_with_zero(AHfl)\n",
+    "na = replace_none_with_zero(na)\n",
+    "nb = replace_none_with_zero(nb)\n",
+    "\n",
+    "# Crear un diccionario con las propiedades y sus valores\n",
+    "suma_contribuciones = {\n",
+    "    'Tb': 198.2 + np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'Tc': (198.2 + np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))) * ((0.584 + (0.965 * np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))) - (np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))**2))**(-1),\n",
+    "    'Pc': (0.113 + 0.0032 * np.sum(NA) - np.sum(Pc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))**(-2),\n",
+    "    'Vc': np.sum(Vc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])) + 17.5,\n",
+    "    'Tf': 122.5 + np.sum(Tf * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'AHF': 68.29 + np.sum(AHF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'AGF': 53.88 + np.sum(AGF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'AHV': 15.3 + np.sum(AHV * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'AHfl': 0.88 + np.sum(AHfl * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCa': -37.93 + np.sum(IGCa * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCb': 0.210 + np.sum(IGCb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCc': -3.91e-4 + np.sum(IGCc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCd': 2.06e-7 + np.sum(IGCd * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'na': np.sum(na * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'nb': np.sum(nb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "}\n",
+    "\n",
+    "# Crear un DataFrame de una fila con los valores de las propiedades\n",
+    "df_suma_contribuciones = pd.DataFrame([suma_contribuciones])\n",
+    "# Imprimir la tabla de sumas de contribuciones\n",
+    "df_suma_contribuciones\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b79aa8a-fa29-4823-b5d6-91426560aa60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##################################################################################\n",
     "# Crear una función para reemplazar None por 0.00 en un vector\n",
     "def replace_none_with_zero(vector):\n",
     "    return np.array([0.00 if x is None else x for x in vector])\n",
@@ -402,27 +367,49 @@
     "\n",
     "# Calcular la suma de las contribuciones para cada vector\n",
     "### falta cambiar nombres y introducir simbolos en la tabla ademas de meter unidades\n",
-    "suma_contribuciones = {\n",
+    "if T == 0:\n",
+    "  suma_contribuciones = {\n",
     "    'Tb': 198.2+np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
     "    'Tc': (198.2+np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))*(0.584+(0.965*np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))-(np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))^2)^(-1), ## falta comprobar posible error que multiplique antes de elevar a -1\n",
     "    'Pc': (0.113+0.0032*NA-np.sum(Pc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))^(-2), #### falta definir NA\n",
     "    'Vc': 17.5+np.sum(Vc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
     "    'Tf': 122.5+np.sum(Tf * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'AHF': = 68.29+np.sum(AHF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), #entropia formacion E.I.\n",
+    "    'AHF': 68.29+(np.sum(AHF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))), #entropia formacion E.I.\n",
     "    'AGF': 53.88+np.sum(AGF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), #energia de gibbs E.I\n",
-    "    'AHV': 15.3+np.sum(AHV * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])) #entalpia de vaporizacion en el punto de ebullicion\n",
-    "    'AHfl': (0.88)+np.sum(AHfl * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))\n",
-    "    ## dar opcion para que si existe t salga la capacidad en dicho punto si no es asi que salga los valores del polinomio\n",
+    "    'AHV': 15.3+np.sum(AHV * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), #entalpia de vaporizacion en el punto de ebullicion\n",
+    "    'AHfl': (0.88)+np.sum(AHfl * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
     "    'IGCa': (-37.93)+np.sum(IGCa * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
     "    'IGCb': 0.210+np.sum(IGCb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
     "    'IGCc':(-3.91e-4)+np.sum(IGCc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
-    "    'IGCd': 2.06e-7+np.sum(IGCd * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))\n",
-    "     ## dar opcion para que si existe t salga la viscosidad en dicho punto si no es asi que salga los valores del polinomio\n",
-    "    # 'nl':MW*np.exp(((-597.82)+np.sum(na * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))/T+(-11.202+np.sum(nb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))) falta definir el vecot MW\n",
-    "\n",
+    "    'IGCd': 2.06e-7+np.sum(IGCd * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'na': np.sum(na * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'nb': np.sum(nb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), \n",
+    "      \n",
+    "  }\n",
     "    \n",
+    "else: \n",
     "    \n",
-    "    \n",
+    "    'IGCa': (-37.93) + np.sum(IGCa * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCb': 0.210+np.sum(IGCb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCc':(-3.91e-4)+np.sum(IGCc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'IGCd': 2.06e-7+np.sum(IGCd * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'na': np.sum(na * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'nb': np.sum(nb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])), \n",
+    "   \n",
+    "suma_contribuciones = {\n",
+    "    # Calcular la capacidad como gas ideal (IGC)\n",
+    "    'IGC': IGCa + IGCb * T + IGCc * T**2 + IGCd * T**3,\n",
+    "    'Tb': 198.2 + np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'Tc': (198.2 + np.sum(Tb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))) * (0.584 + (0.965 * np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))) - (np.sum(Tc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))**2)**(-1),  # falta comprobar posible error que multiplique antes de elevar a -1\n",
+    "    'Pc': (0.113 + 0.0032 * NA - np.sum(Pc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])))**(-2),  # falta definir NA\n",
+    "    'Vc': 17.5 + np.sum(Vc * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'Tf': 122.5 + np.sum(Tf * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    'AHF': 68.29 + np.sum(AHF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),  # entropía de formación E.I.\n",
+    "    'AGF': 53.88 + np.sum(AGF * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),  # energía de Gibbs E.I.\n",
+    "    'AHV': 15.3 + np.sum(AHV * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),  # entalpía de vaporización en el punto de ebullición\n",
+    "    'AHfl': 0.88 + np.sum(AHfl * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios])),\n",
+    "    # Calcular la viscosidad en el punto\n",
+    "    'nl': MW * np.exp(((-597.82) + np.sum(na * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))) / T + (-11.202 + np.sum(nb * np.array([grupos_químicos[grupo] for grupo in grupos_necesarios]))))\n",
     "}\n",
     "\n",
     "# Crear un DataFrame de Pandas con las sumas de contribuciones\n",
