--- a/TQA (1).ipynb
+++ b/TQA (1).ipynb
@@ -15,11 +15,25 @@
    "source": [
     "# Indice\n",
     "\n",
-    "* [Joback](#Joback) \n",
-    "* [Cp$_{ig}$](#Capacidad-calorifica-como-gas-ideal)\n",
-    "* [Punto triple](#Calculo_punto_triple)\n",
-    "* [Diagrama de Fases](#Diagrama-de-Fases)\n",
-    "* [Bibliografia](#Bibliografia)\n"
+    "- [Introduccion](#Introduccion)\n",
+    "- [Joback](#Joback) \n",
+    "- [Cp$_{ig}$](#Capacidad-calorifica-como-gas-ideal)\n",
+    "- [Lineas de equilibrio](#Lineas-de-equilibrio) \n",
+    "  - [Clausius-Clapeyron](#Clausius-Clapeyron) \n",
+    "  - [Antoine](#Ajuste-Antoine) \n",
+    "  - [Acentrico](#Factor-acentrico)\n",
+    "  - [Entalpia de vaporizacion](#Entalpia-de-vaporizacion) \n",
+    "- [Punto triple](#Calculo-punto-triple)\n",
+    "- [Diagrama de Fases](#Diagrama-de-Fases)\n",
+    "- [Ecuacion del Virial](#Ecuacion-del-Virial)\n",
+    "- [Ecuaciones cubicas de estado](#Ecuaciones-cubicas-de-estado) \n",
+    "  - [Isotermas Van der walls](#Isotermas:Van-der-waals) \n",
+    "  - [Isotermas Redlich-kwong](#Isotermas:-Redlich-kwong) \n",
+    "  - [Isotermas Soave-Redlich kwong](#Isotermas:-Soave-Redlich-kwong) \n",
+    "  - [Isotermas Peng robinson](#Isotermas:-Peng-Robinson) \n",
+    "- [Propiedades Residuales](#Propiedades-Residuales) \n",
+    "- [Diagrama de mollier](#Diagrama-de-mollier) \n",
+    "- [Bibliografía](#Bibliografia)\n"
    ]
   },
   {
@@ -647,7 +661,7 @@
    "id": "247962a7-6717-4fb9-8cce-759b4c05f9ea",
    "metadata": {},
    "source": [
-    "## Virial"
+    "# Lineas de equilibrio"
    ]
   },
   {
@@ -655,7 +669,7 @@
    "id": "92dea061-450d-47ac-9d7a-c2b560e1e4d5",
    "metadata": {},
    "source": [
-    "# Clausius clapeyron"
+    "## Clausius clapeyron"
    ]
   },
   {
@@ -938,6 +952,14 @@
     "plt.title(sustancia + ': Ajuste Clausius-Clapeyron')\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1696b2f-057f-46cd-974f-f8e6db669eda",
+   "metadata": {},
+   "source": [
+    "## Ajuste Antoine"
    ]
   },
   {
@@ -1398,12 +1420,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8b74884-e95f-48fb-9949-3cb35be3ad28",
+   "cell_type": "markdown",
+   "id": "b9b46be0-56fd-4506-b3a0-d0b69aaa2468",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Factor acentrico"
+   ]
   },
   {
    "cell_type": "code",
@@ -1636,9 +1658,7 @@
    "metadata": {
     "tags": []
    },
-   "source": [
-    "## ecuaciones cubicas de estado"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2026,6 +2046,14 @@
     "print('los valores con el punto critico son')\n",
     "print()\n",
     "display(resultados_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4766d0-7b27-4a49-a45a-0f555d1bfe0c",
+   "metadata": {},
+   "source": [
+    "## Entalpia de vaporizacion"
    ]
   },
   {
@@ -2440,7 +2468,7 @@
     "tags": []
    },
    "source": [
-    "# Ecuacion Virial"
+    "# Ecuacion del Virial"
    ]
   },
   {
@@ -2753,7 +2781,7 @@
    "id": "b9ccdfa5-6a40-4712-b6f3-9aceb27ec4ce",
    "metadata": {},
    "source": [
-    "# Ecuaciones cubicas de estado"
+    "# Ecuaciones-cubicas-de-estado"
    ]
   },
   {
@@ -3017,6 +3045,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4cc1f93d-9a02-4ffb-b739-195c54308b49",
+   "metadata": {},
+   "source": [
+    "## Isotermas:Van der waals"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "3a41b1f4-e2a0-4bed-8957-45bcd03fe30f",
@@ -3240,6 +3276,14 @@
     "plt.title('VW: Isotermas, diagrama de fases de '+sustancia)\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e60ba9fb-73b5-4dc5-a782-a39c37821228",
+   "metadata": {},
+   "source": [
+    "## Isotermas: Redlich-kwong"
    ]
   },
   {
@@ -3528,6 +3572,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf097011-08d5-4acc-b08c-99e213789b46",
+   "metadata": {},
+   "source": [
+    "## Isotermas: Soave-Redlich-kwong"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "0d8211d3-bcee-4534-94ff-717c6dded831",
@@ -3691,6 +3743,14 @@
     "plt.title('SRK: Isotermas, diagrama de fases de '+sustancia)\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb6f577-b6b8-4d13-9425-78178a1449cf",
+   "metadata": {},
+   "source": [
+    "## Isotermas: Peng-Robinson"
    ]
   },
   {
@@ -3977,7 +4037,9 @@
   {
    "cell_type": "markdown",
    "id": "fe727e5f-8f9c-41a9-9071-cf4e20a28ad0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Propiedades Residuales\n"
    ]
@@ -3993,7 +4055,9 @@
   {
    "cell_type": "raw",
    "id": "ec02b93d-f24a-4eaf-b45e-619f69abc7e1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "\"\"\"\n",
     "Created on Tue Sep  6 10:09:27 2022\n",
@@ -4434,6 +4498,161 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566d57c4-a60e-40c7-b283-088f9728e3f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sustancia:dioxido de carbono, CO2\n",
+    "# Datos críticos y factor acéntrico: K, Pa y m^3/mol\n",
+    "#sustancia='CO2'\n",
+    "#TC=304.2\n",
+    "#PC=7.383e6\n",
+    "#VC=94e-6\n",
+    "#FA=0.224 \n",
+    "#CritPoint=[TC,PC,FA]\n",
+    "# Metanol, CH3OH\n",
+    "# Datos críticos y factor acéntrico: K, Pa y m^3/mol\n",
+    "sustancia='Metanol'\n",
+    "TC=512.5\n",
+    "PC=8.084e6\n",
+    "VC=117e-6\n",
+    "FA=0.556 \n",
+    "\n",
+    "# Butano, C4H8\n",
+    "# Datos críticos y factor acéntrico: K, Pa y m^3/mol\n",
+    "sustancia = 'Butano'\n",
+    "TC=425.1\n",
+    "PC=37.96e5\n",
+    "FA=0.200\n",
+    "\n",
+    "CritPoint=[TC,PC,FA]\n",
+    "\n",
+    "## EE del virial. \n",
+    "# Parámetros del 2º coeficiente del virial\n",
+    "\n",
+    "# Coef. virial CO2\n",
+    "#AB=[-127.3,-287.6,-118.3][::-1]\n",
+    "\n",
+    "# Coef. virial Metanol, CH3OH\n",
+    "#AB=[-21936,-26617,-11578,-1967][::-1]\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "## Datos del 2º coeficiente del virial Butano\n",
+    "# datos de Landolt-Börnstein\n",
+    "T_V=np.array([310,315,320,330,338.2,340,343.2,348.2,353.2,360,363.2,373,373.2,398.2,400,422,423.16,423.16,423.2,448.16,448.16,450,450,473.16,473.16,473.16, 473.16, 473.16, 474, 493, 498.16, 498.16, 523.16, 523.16, 528, 573.16, 573.16, 583, 628, 628])\n",
+    "B_exp=np.array([-1483, -1349, -1230, -1031, -884, -873, -822, -767, -718, -643, -631, -504.2, -560, -427, -380.2, -307.1, -323, -318, -337, -258.8, -258.2, -263.1, -263.1, -220, -216.9, -218.1, -220.5, -220.5, -202.8, -173.7, -181.2, -180.7, -156.6, -155.9, -142.2, -113.1, -117.2, -94.6, -75.5, -75.5])\n",
+    "AB = np.polyfit((298.15/T_V-1),B_exp,4)\n",
+    "# Datos CCl4\n",
+    "#T_V=np.array([315.7, 323.2, 333.2, 333.7, 337.2, 343.2, 343.2, 353.2, 353.3, 375.4, 383.2, 393.2, 398.6, 413.2, 418.8])\n",
+    "#B_exp=1e-6*([-1445, -1330, -1170, -1225, -1170, -1120, -1098, -1033, -1088, -972, -869, -823, -876, -741, -812])\n",
+    "#AB=np.polyfit((298.15/T_V-1),B_exp,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f676f76-6e16-4817-98c7-023bcd7ea9d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Condiciones: presión, Pa, y temperatura, K\n",
+    "P=4e6\n",
+    "T=500 \n",
+    "from TQA_EE import R\n",
+    "# Cálculo del volumen molar como gas ideal\n",
+    "VIG=R*T/P\n",
+    "\n",
+    "# Cálculo de B y dBdT\n",
+    "B=np.polyval(AB,298.15/T-1)*1e-6\n",
+    "dBdT=np.polyval(np.polyder(AB)*(-298.15*T**-2),298.15/T-1)*1e-6\n",
+    "# Estimación de B(BE) y dBdT(dBdTE)\n",
+    "B0=0.083-0.422/(T/TC)**1.6 \n",
+    "B1=0.139-0.172/(T/TC)**4.2 \n",
+    "BE=(B0+FA*B1)*(R*TC/PC) \n",
+    "dBdTE=(0.6752*TC**1.6/T**2.6+FA*0.7224*TC**4.2/T**5.2)*(R*TC/PC) \n",
+    "# Cálculo del volumen molar\n",
+    "VV=R*T/P+B\n",
+    "VVE=R*T/P+BE \n",
+    "# Cálculo del factor de compresibilidad\n",
+    "ZV=R*T/(P*VV)\n",
+    "ZVE=R*T/(P*VVE) \n",
+    "# Cálculo entalpía y energía de Gibbs residual\n",
+    "HRV=(B-T*dBdT)*P\n",
+    "GRV=B*P \n",
+    "HRVE=(BE-T*dBdTE)*P\n",
+    "GRVE=BE*P "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db291f6-d5fc-4814-9965-eb5883374cad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## EE van der Waals.  \n",
+    "# Cálculo del volumen molar y factor de compresibilidad\n",
+    "from TQA_EE import VW,abVW\n",
+    "[a,b]=abVW(T,CritPoint)\n",
+    "VVW=VW(T=T,P=P,CritPoint=CritPoint)\n",
+    "[VVW]=[v.real for v in VVW if (v.imag==0)]\n",
+    "Z=P*VVW/(R*T)\n",
+    "# Cálculo entalpía y energía de Gibbs residual\n",
+    "GRVW=R*T*(Z-np.log(Z)-1-np.log(1-b/VVW)-a/(R*T*VVW)) \n",
+    "HRVW=R*T*(Z-1)-a/VVW\n",
+    "## EE Redlich-Kwong.  \n",
+    "# Cálculo del volumen molar y factor de compresibilidad\n",
+    "from TQA_EE import RK,abRK\n",
+    "[a,b,alfa]=abRK(T,CritPoint)\n",
+    "VRK=RK(T=T,P=P,CritPoint=CritPoint)\n",
+    "[VRK]=[v.real for v in VRK if (v.imag==0)]\n",
+    "Z=P*VRK/(R*T) \n",
+    "# Cálculo entalpía y energía de Gibbs residual\n",
+    "GRRK=R*T*(Z-np.log(Z)-1-np.log(1-b/VRK)-a*np.log(1+b/VRK)/(R*T*b)) \n",
+    "HRRK=R*T*(Z-1)-1.5*a/b*np.log(1+b/VRK) \n",
+    "## EE Soave-Redlich-Kwong.  \n",
+    "# Cálculo del volumen molar y factor de compresibilidad\n",
+    "from TQA_EE import SRK,abSRK\n",
+    "[a,b,alfa,m]=abSRK(T,CritPoint)\n",
+    "VSRK=SRK(T=T,P=P,CritPoint=CritPoint)\n",
+    "[VSRK]=[v.real for v in VSRK if (v.imag==0)]\n",
+    "Z=P*VSRK/(R*T)\n",
+    "# Cálculo entalpía y energía de Gibbs residual\n",
+    "GRSRK=R*T*(Z-np.log(Z)-1-np.log(1-b/VSRK)-a*np.log(1+b/VSRK)/(R*T*b)) \n",
+    "HRSRK=R*T*(Z-1)-(a/b)*(1+(m/alfa)*(T/TC)**0.5*(1+m*(1-(T/TC)**0.5)))*np.log(1+b/VSRK) \n",
+    "## EE Peng-Robinson.  \n",
+    "# Cálculo del volumen molar y factor de compresibilidad\n",
+    "from TQA_EE import PR,abPR\n",
+    "[a,b,alfa,m]=abPR(T,CritPoint)\n",
+    "VPR=PR(T=T,P=P,CritPoint=CritPoint)\n",
+    "[VPR]=[v.real for v in VPR if (v.imag==0)]\n",
+    "Z=P*VPR/(R*T) \n",
+    "# Cálculo entalpía y energía de Gibbs residual\n",
+    "GRPR=R*T*(Z-np.log(Z)-1-np.log(1-b/VPR)-(a/(R*T))*np.log((VPR+(1+2**0.5)*b)/(VPR+(1-2**0.5)*b))/(2**1.5*b)) \n",
+    "HRPR=R*T*(Z-1)-a/(b*8**0.5)*(1+m*(T/TC/alfa)**0.5)*np.log((VPR+(1+2**0.5)*b)/(VPR+(1-2**0.5)*b))\n",
+    "## Mostrar resultados\n",
+    "print(sustancia)\n",
+    "print('T = ', '%.2f' % T, 'K \\tP = ', '%.4g' % P, 'Pa')\n",
+    "print('Comparacion coeficiente del virial experimental y estimado\\n')\n",
+    "print('B = ','%.4g'%B,' m^3/mol   dBdT = ','%.4g'%dBdT,' m^3/mol K')\n",
+    "print('BE= ','%.4g'%BE,' m^3/mol   dBdT_E= ','%.4g'%dBdTE,' m^3/mol K')\n",
+    "print('\\nTC =',TC,'K\\tPC =',PC,'Pa\\tFA =',FA)\n",
+    "print('\\nResumen de Ecuaciones de estado del virial, van der Waals, Redlich-Kwong,',end=' ')\n",
+    "print('Soave-Redlich-Kwong y Peng-Robinson')\n",
+    "print('Ec. Estado  \\t  Volumen molar ','    H residual     ','G residual')\n",
+    "EE=iter(['Virial \\t','Vir.est\\t','VW \\t','RK \\t','SRK\\t','PR \\t'])\n",
+    "for ai in [[VV,HRV,GRV],[VVE,HRVE,GRVE],[VVW,HRVW,GRVW],[VRK,HRRK,GRRK],[VSRK,HRSRK,GRSRK],[VPR,HRPR,GRPR]]:\n",
+    "    EEi=next(EE)\n",
+    "    print(EEi,end='\\t')\n",
+    "    for aij in ai:\n",
+    "        print('{:>15}'.format('%.5g' % aij), end='\\t')\n",
+    "    print()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "02c35a56-46ea-4a83-a403-df4971f1c9e2",
    "metadata": {},
@@ -4658,14 +4877,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61838768-bf73-4e16-8c91-113034fa11df",
-   "metadata": {},
-   "source": [
-    "# Propiedades "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "210c4cc3-d6c5-404f-9520-5048af91347c",
    "metadata": {},
    "source": [
@@ -4674,58 +4885,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "id": "a0d8ed12-706c-42fc-ac71-08525d5ea346",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Path (<tt>Termo/ICSC 0490 - 1-HEXENE.pdf</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
+       "<a href='ICSC 0490 - 1-HEXENE.pdf' target='_blank'>ICSC 0490 - 1-HEXENE.pdf</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\chris\\Termo\\Termo\\ICSC 0490 - 1-HEXENE.pdf"
+       "C:\\Users\\chris\\Termo\\ICSC 0490 - 1-HEXENE.pdf"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'IFrame' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[58], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m display(FileLink(pdf_path))\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Muestra el PDF directamente\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m display(IFrame(pdf_path, width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m600\u001b[39m, height\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m300\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'IFrame' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"800\"\n",
+       "            src=\"ICSC 0490 - 1-HEXENE.pdf\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x217cc323110>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from IPython.display import display, FileLink, IFrame\n",
+    "from IPython.display import FileLink, display, IFrame\n",
     "\n",
-    "# Ruta al archivo PDF\n",
-    "pdf_path = 'ruta/del/archivo.pdf'\n",
+    "# Ruta del archivo PDF en el directorio actual\n",
+    "pdf_path = 'ICSC 0490 - 1-HEXENE.pdf'\n",
     "\n",
-    "# Muestra el enlace al archivo PDF\n",
+    "# Crea un enlace al archivo y lo muestra\n",
     "display(FileLink(pdf_path))\n",
     "\n",
     "# Muestra el PDF directamente\n",
-    "display(IFrame(pdf_path, width=600, height=300))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "pdf_path = ''\n",
-    "\n",
-    "# Muestra el enlace al archivo PDF\n",
-    "display(FileLink(pdf_path))\n",
-    "\n",
-    "# Muestra el PDF directamente\n",
-    "display(IFrame(pdf_path, width=600, height=300))\n",
-    "\n",
-    "\n"
+    "display(IFrame(pdf_path, width=\"100%\", height=800))\n"
    ]
   },
   {
