--- a/TQA (1).ipynb
+++ b/TQA (1).ipynb
@@ -4633,23 +4633,7 @@
     "# Cálculo entalpía y energía de Gibbs residual\n",
     "GRPR=R*T*(Z-np.log(Z)-1-np.log(1-b/VPR)-(a/(R*T))*np.log((VPR+(1+2**0.5)*b)/(VPR+(1-2**0.5)*b))/(2**1.5*b)) \n",
     "HRPR=R*T*(Z-1)-a/(b*8**0.5)*(1+m*(T/TC/alfa)**0.5)*np.log((VPR+(1+2**0.5)*b)/(VPR+(1-2**0.5)*b))\n",
-    "## Mostrar resultados\n",
-    "print(sustancia)\n",
-    "print('T = ', '%.2f' % T, 'K \\tP = ', '%.4g' % P, 'Pa')\n",
-    "print('Comparacion coeficiente del virial experimental y estimado\\n')\n",
-    "print('B = ','%.4g'%B,' m^3/mol   dBdT = ','%.4g'%dBdT,' m^3/mol K')\n",
-    "print('BE= ','%.4g'%BE,' m^3/mol   dBdT_E= ','%.4g'%dBdTE,' m^3/mol K')\n",
-    "print('\\nTC =',TC,'K\\tPC =',PC,'Pa\\tFA =',FA)\n",
-    "print('\\nResumen de Ecuaciones de estado del virial, van der Waals, Redlich-Kwong,',end=' ')\n",
-    "print('Soave-Redlich-Kwong y Peng-Robinson')\n",
-    "print('Ec. Estado  \\t  Volumen molar ','    H residual     ','G residual')\n",
-    "EE=iter(['Virial \\t','Vir.est\\t','VW \\t','RK \\t','SRK\\t','PR \\t'])\n",
-    "for ai in [[VV,HRV,GRV],[VVE,HRVE,GRVE],[VVW,HRVW,GRVW],[VRK,HRRK,GRRK],[VSRK,HRSRK,GRSRK],[VPR,HRPR,GRPR]]:\n",
-    "    EEi=next(EE)\n",
-    "    print(EEi,end='\\t')\n",
-    "    for aij in ai:\n",
-    "        print('{:>15}'.format('%.5g' % aij), end='\\t')\n",
-    "    print()\n"
+    "\n"
    ]
   },
   {
@@ -4885,7 +4869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 91,
    "id": "a0d8ed12-706c-42fc-ac71-08525d5ea346",
    "metadata": {},
    "outputs": [
@@ -4916,7 +4900,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x217cc323110>"
+       "<IPython.lib.display.IFrame at 0x217cc91cf90>"
       ]
      },
      "metadata": {},
@@ -4933,7 +4917,8 @@
     "display(FileLink(pdf_path))\n",
     "\n",
     "# Muestra el PDF directamente\n",
-    "display(IFrame(pdf_path, width=\"100%\", height=800))\n"
+    "display(IFrame(pdf_path, width=\"100%\", height=800))\n",
+    "\n"
    ]
   },
   {
@@ -4949,7 +4934,16 @@
    "execution_count": null,
    "id": "2e80f874-6f52-4307-abf3-aeeee354c098",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: PyMuPDF in s:\\conda\\lib\\site-packages (1.23.6)\n",
+      "Requirement already satisfied: PyMuPDFb==1.23.6 in s:\\conda\\lib\\site-packages (from PyMuPDF) (1.23.6)\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
