--- a/1-hexene.ipynb
+++ b/1-hexene.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Indice\n",
     "\n",
-    "- [Introduccion](#Introduccion)\n",
+    "- [Introduccion](#Introducción)\n",
     "- [Joback](#Joback) \n",
     "- [Cp$_{ig}$](#Capacidad-calorifica-como-gas-ideal)\n",
     "- [Lineas de equilibrio](#Lineas-de-equilibrio) \n",
@@ -26,11 +26,13 @@
     "- [Punto triple](#Calculo-punto-triple)\n",
     "- [Diagrama de Fases](#Diagrama-de-Fases)\n",
     "- [Ecuacion del Virial](#Ecuacion-del-Virial)\n",
+    "  -[Comprensibilidad y expansión](#Factor-de-comprensibilidad-y-expansion )\n",
     "- [Ecuaciones cubicas de estado](#Ecuaciones-cubicas-de-estado) \n",
     "  - [Isotermas Van der walls](#Isotermas:Van-der-waals) \n",
     "  - [Isotermas Redlich-kwong](#Isotermas:-Redlich-kwong) \n",
     "  - [Isotermas Soave-Redlich kwong](#Isotermas:-Soave-Redlich-kwong) \n",
     "  - [Isotermas Peng robinson](#Isotermas:-Peng-Robinson) \n",
+    "-[Cp$_{liq}$](#Capacidad-calorifica-del-liquido)\n",
     "- [Propiedades Residuales](#Propiedades-Residuales) \n",
     "- [Diagrama de mollier](#Diagrama-de-mollier) \n",
     "- [Bibliografía](#Bibliografia)\n"
@@ -43,8 +45,16 @@
     "tags": []
    },
    "source": [
-    " ### propiedades termodinamicas \n",
-    " CAS 592-41-6"
+    " ### Introducción\n",
+    " el 1-hexeno, CAS 592-41-6 se trata de un hidrocarburo alifatico insaturado, es un alqueno que se encuentra en fase liquida a tempertautra ambiente si hacemos una breve busqueda en [sciencedirect](https://www.sciencedirect.com/search?qs=1-hexene) a dia 11/19/2023 \n",
+    " \n",
+    " se puede encontrar aproximadamente 19.000 resultados, esto se debe a que se utiliza como materia prima en la fabricacion de otros productos quimicos, en concreto es ampliamente utilizado en la polimerizacion. Aunque algunas veces puede ser utilizado como combustible\n",
+    " \n",
+    " se trata de una sustancia apolar, es decir es Insoluble en agua y se usa en una amplia cantidad de reacciones por ello podemos encontrar muchos datos tabulados de azeotropos con este componente, Aunque hay pocos datos tabulados para su fase liquida y gas\n",
+    " \n",
+    " tiene una temperatura de fusion que ronda los -140$^\\circ C$, es incoloro y se obtiene principalmente por destilaccion de fracciones de petroleo o bien por craqueo de hidrocarburos mas pesados, Se destaca su uso para la obtencion del polietileno de baja densidad (LDPE)\n",
+    " \n",
+    " que se obtiene por una polimerizacion radicalaria, su estructura es  CH3(CH2)3CH=CH2"
    ]
   },
   {
@@ -2504,7 +2514,22 @@
    "id": "cf7ca8ff-1216-4d7a-a570-23395377ba59",
    "metadata": {},
    "source": [
-    "la ecuacion de clausius que se habia obtenido anteriormente es con respecto a los puntos de la linea de vaporizacion por tanto la entalpia que da es la de vaporizacion, ya que no tenemos datos para obtener la ecuacion de clausius de los puntos de sublimacion se calcula la entalpia de vaporizacion en el punto triple y se le añade la de fusion que viene tabulada en el nist, esta la comparamos a la obtenida mediante la derivada respecto a T de la ecuacion de antoine y usaremos los puntos para tener la presion del punto triple, ademas tambien aunque no se muestra en el script se va a varios puntos con un rango de hasta TP-15K para poder representar en el diagrama de fases, esto no es del todo preciso ya que esa ecuacion solo se cumple en el triple pero puesto que la ecuacion de clausius viene dada para el rango de T entre 190/500k y con los puntos de la linea de vaporizacion si la aplicaramos en los datos de sublimacion daria un error aun mayor, por otra parte el error que se ha calculado es el de la diferencia de entalpias con respecto a la de mayor valor. "
+    "la ecuacion de clausius que se habia obtenido anteriormente es con respecto a los puntos de la linea de vaporizacion por tanto la entalpia que da es la de vaporizacion, ya que no tenemos datos para obtener \n",
+    "\n",
+    "la ecuacion de clausius de los puntos de sublimacion se calcula la entalpia de vaporizacion en el punto triple y se le añade la de fusion que viene tabulada en el [nist](#Bibliografia).\n",
+    "\n",
+    "Esta la comparamos a la obtenida mediante la derivada respecto a T de la ecuacion de antoine y usaremos los puntos para tener la presion del punto triple\n",
+    "\n",
+    "ademas tambien aunque no se muestra en el script se va a varios puntos con un rango de hasta TP-15K para poder representar en el diagrama de fases, esto no es del todo preciso ya que esa ecuacion solo se cumple en el triple.\n",
+    "\n",
+    "Puesto que la ecuacion de clausius viene dada para el rango de T entre 190/500k y con los puntos de la linea de vaporizacion si la aplicaramos en los datos de sublimacion daria un error aun mayor por otra parte el error que \n",
+    "\n",
+    "se ha calculado es el de la diferencia de entalpias con respecto a la de mayor valor. Hay que tener en cuenta que la ecuacion de clausius para la linea de sublimacion sera diferente a los de la de vaporizacion, \n",
+    "\n",
+    "por ello cuando se calcula la derivada como se usa los datos de vaporizacion da la entalpia de vaporizacion \n",
+    "\n",
+    "el error se ha calculado como la diferencia de entalpias entre la de mayor valor, algunos datos que se han calculado son:\n",
+    "\n"
    ]
   },
   {
@@ -2512,9 +2537,9 @@
    "id": "2dddb8f6-93af-4754-82d2-94484dcba5c2",
    "metadata": {},
    "source": [
-    "presiones proximas al punto triple mediante el calculo anterior: [8.046314291618236e-12,4.513569892899304e-12,2.497494240728742e-12 ,1.3625086118343765e-12 ,7.324934972746018e-13,3.8785268671527126e-13,2.0215566055590194e-13,1.0365893993121934e-13,5.225916339561218e-14]\n",
+    "* presiones proximas al punto triple mediante el calculo anterior: [8.046314291618236e-12,4.513569892899304e-12,2.497494240728742e-12 ,1.3625086118343765e-12 ,7.324934972746018e-13,3.8785268671527126e-13,2.0215566055590194e-13,1.0365893993121934e-13,5.225916339561218e-14]\n",
     "\n",
-    "Temperaturas proximas al punto triple: [131.39,130.39,129.39,128.39,127.39,126.39,125.39,124.39,123.39]"
+    "* Temperaturas proximas al punto triple: [131.39,130.39,129.39,128.39,127.39,126.39,125.39,124.39,123.39]"
    ]
   },
   {
@@ -2801,8 +2826,11 @@
    "id": "349f6ced-9e4e-45da-9f81-eb3692a25d9a",
    "metadata": {},
    "source": [
-    "En este caso como el factor de correlacion de pitzer y curl  modificado por abbot que es el que estamos usando solo se puede aplicar a sustancias no polares y el 1-hexeno es insoluble en agua  segun la bibliografia \"Physical Constants of Organic Compounds\", in CRC Handbook of Chemistry and Physics, Internet Version 2005, David\n",
-    "R. Lide, ed., <http://www.hbcpnetbase.com>, CRC Press, Boca Raton, FL, 2005. Ademas tambien lo podemos ver con la constante de solubilidad en chemeo  para Log10 of Water solubility in mol/l. tiene un valor de -3.23 que es un valor de solubilidad bajo por tanto la sustancia tiene un caracter apolar y se puede aplicar sin ningun problema"
+    "En este caso como el factor de correlacion de pitzer y curl  modificado por abbot que es el que estamos usando solo se puede aplicar a sustancias no polares y el 1-hexeno es insoluble en agua  segun la bibliografia \n",
+    "\n",
+    "\"Physical Constants of Organic Compounds\", in CRC Handbook of Chemistry and Physics, Internet Version 2005, David R. Lide, ed., <http://www.hbcpnetbase.com>, CRC Press, Boca Raton, FL, 2005. \n",
+    "\n",
+    "Ademas tambien lo podemos ver con la constante de solubilidad en chemeo  para Log10 of Water solubility in mol/l. tiene un valor de -3.23 que es un valor de solubilidad bajo por tanto la sustancia tiene un caracter apolar y se puede aplicar sin ningun problema"
    ]
   },
   {
@@ -3007,6 +3035,14 @@
     "df_resultados = pd.DataFrame(resultados)\n",
     "print('\\n' * 2)\n",
     "display(df_resultados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8c72017-21ad-43f5-abee-4de321dde23b",
+   "metadata": {},
+   "source": [
+    "# Factor de comprensibilidad y expansion "
    ]
   },
   {
@@ -5800,17 +5836,19 @@
    "id": "02c35a56-46ea-4a83-a403-df4971f1c9e2",
    "metadata": {},
    "source": [
-    "# Diagrama de mollier"
+    "# Capacidad calorifica del liquido"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5f36fd0-a60b-46ea-b473-f06b5a56151f",
+   "cell_type": "markdown",
+   "id": "e40a5d41-c550-492b-80f1-5d0ca5403c12",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Como solo tengo un dato de capacidad calorifica para el liquido, he encontrado un articulo donde da un metodo de calculo por la contribucion de subgrupos "
+    "debido a que solo tengo un dato de capacidad calorifica del liquido y hace falta para el diagrama de mollier se ha calculado con el articulo \n",
+    "\n",
+    "Prediction of heat capacities and heats of vaporization of organic liquids by group contribution methods\n",
+    "\n",
+    "que se basa en el calculo de propiedades por contribucion de grupos, es decir es similar a joback que se calculo en el primer apartado"
    ]
   },
   {
@@ -6011,6 +6049,27 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1e5a69-5c30-4d70-af4b-0ad01fc10985",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "el error se ha calculado como 1-valor calculado/teorico se ha comparado con el unico punto experimental existente como sugiere la bibliografia da un error menor al 5% aunque en la bibliografia\n",
+    "\n",
+    "indican que en sus experimentos estaban por encima de ese rango como da una ecuacion lineal no hay ningun problema, por otra parte se podia haber el ajuste de la recta sin calcular el polinomio\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ccf5f23-1311-4df8-85ab-0a52e2c7e48a",
+   "metadata": {},
+   "source": [
+    "# Diagrama de mollier"
    ]
   },
   {
@@ -6289,12 +6348,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e80f874-6f52-4307-abf3-aeeee354c098",
+   "cell_type": "markdown",
+   "id": "4801a728-093c-40b2-a127-0bd8664d2132",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Carbonate, M. (2021). ACUTE HAZARDS PREVENTION Inhalation Skin Eyes Ingestion PREVENTION CLASSIFICATION & LABELLING PHYSICAL & CHEMICAL INFORMATION EXPOSURE & HEALTH EFFECTS ENVIRONMENT. 2–3.\n",
+    "\n",
+    "* Ceriani, R., Gani, R., & Meirelles, A. J. A. (2009). Prediction of heat capacities and heats of vaporization of organic liquids by group contribution methods. Fluid Phase Equilibria, 283(1–2), 49–55. https://doi.org/10.1016/j.fluid.2009.05.016\n",
+    "\n",
+    "* Cox, K. R., & Chapman, W. G. (2001). The Properties of Gases and Liquids, 5th Edition By Bruce E. Poling (University of Toledo), John M. Prausnitz (University of California at Berkeley), and John P. O’Connell (University of Virginia). McGraw-Hill: New York. 2001. 768 pp. ISBN 0-07-0. In Journal of the American Chemical Society (Vol. 123, Issue 27). https://doi.org/10.1021/ja0048634\n",
+    "\n",
+    "* Johnstone, A. H. (1991). CRC Handbook of Chemistry and Physics—69th Edition Editor in Chief R. C. Weast, CRC Press Inc., Boca Raton, Florida, 1988, pp. 2400. ISBN 0-8493–0369–5. Journal of Chemical Technology & Biotechnology, 50(2), 294–295. https://doi.org/10.1002/jctb.280500215\n",
+    "\n",
+    "* [chemeo](https://www.chemeo.com/cid/20-747-0/1-Hexene)Key, I., Weight, M., & Names, O. (n.d.). Chemical Properties of 1-Hexene ( CAS 592-41-6 ). 1–22. consultado a 10/25/2023\n",
+    "\n",
+    "* [Cheric](https://www.cheric.org/research/kdb/hcprop/showprop.php?cmpid=196) consultado a 10/25/2023 Names, C., Properties, B., & Properties, T. D. (n.d.).  연구정보  교육정보  커뮤니티  리소스.\n",
+    "\n",
+    "* Perry, S., Perry, R. H., Green, D. W., & Maloney, J. O. (2000). Perry’s chemical engineers’ handbook. In Choice Reviews Online (Vol. 38, Issue 02). https://doi.org/10.5860/choice.38-0966\n",
+    "\n",
+    "* Reference, S., Program, D., & Webbook, G. (2011). Data at [NIST](https://webbook.nist.gov/cgi/cbook.cgi?ID=C592416&Units=SI&Mask=4#Thermo-Phase) subscription sites: 1–5. consultado a 10/25/2023\n",
+    "\n",
+    "* Summary, C. (2023). [PubChem](https://pubchem.ncbi.nlm.nih.gov/compound/1-Hexene#section=Solubility) CID Structure 47576. 1–138 consultado a 10/25/2023\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
