--- a/1-hexene.ipynb
+++ b/1-hexene.ipynb
@@ -6493,6 +6493,14 @@
     "\n",
     "* Apuntes de la asignatura termodinámica química aplica Ing.química 2023 Universidad de granada"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "120ea2a7-dbb9-40e2-bf43-0d4eba91bfc7",
+   "metadata": {},
+   "source": [
+    "La version de python que se ha usado para los scripts es la 3.11.5"
+   ]
   }
  ],
  "metadata": {
