--- a/trabajo2.ipynb
+++ b/trabajo2.ipynb
@@ -122,7 +122,6 @@
     "    'F': [F_1, F_2],\n",
     "    'G': [G_1, G_2]\n",
     "})\n",
-    "\n",
     "display(resultados)\n"
    ]
   },
@@ -132,7 +131,9 @@
    "id": "a03191ca-57b5-4ee2-ba47-1297db727a84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fsdfsd"
+   ]
   }
  ],
  "metadata": {
