--- a/trabajo2.ipynb
+++ b/trabajo2.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "a03191ca-57b5-4ee2-ba47-1297db727a84",
    "metadata": {},
    "outputs": [
@@ -1065,6 +1065,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1920x1440 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1800x800 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1160,6 +1178,8 @@
     "plt.ylabel('Temperatura (K)')\n",
     "plt.xlabel('Composición x,y')\n",
     "plt.legend()\n",
+    "plt.figure(dpi=300)  # Ajustar la resolución de la figura\n",
+    "plt.figure(figsize=(18, 8))\n",
     "plt.show()"
    ]
   },
